[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Charac/Catracteristique.gd" type="Script" id=1]
[ext_resource path="res://font/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://font/button-font.tres" type="DynamicFont" id=3]

[node name="editor" type="HBoxContainer"]
margin_right = 48.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 30 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 8.0
margin_right = 34.0
margin_bottom = 22.0
mouse_filter = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Label"

[node name="val" type="Label" parent="."]
margin_left = 38.0
margin_top = 6.0
margin_right = 54.0
margin_bottom = 24.0
mouse_filter = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10"

[node name="diff" type="Label" parent="."]
margin_left = 58.0
margin_top = 6.0
margin_right = 76.0
margin_bottom = 24.0
mouse_filter = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "(0)"

[node name="ButtonBox" type="VBoxContainer" parent="."]
visible = false
margin_left = 87.0
margin_right = 102.0
margin_bottom = 30.0

[node name="Up" type="Button" parent="ButtonBox"]
margin_right = 15.0
margin_bottom = 13.0
mouse_filter = 1
custom_fonts/font = ExtResource( 3 )
text = "+"

[node name="Down" type="Button" parent="ButtonBox"]
margin_top = 17.0
margin_right = 15.0
margin_bottom = 30.0
mouse_filter = 1
custom_fonts/font = ExtResource( 3 )
text = "-"

[node name="VSeparator" type="VSeparator" parent="."]
visible = false
margin_left = 106.0
margin_right = 110.0
margin_bottom = 30.0
[connection signal="mouse_entered" from="." to="." method="_on_editor_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_editor_mouse_exited"]
[connection signal="pressed" from="ButtonBox/Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="ButtonBox/Down" to="." method="_on_Down_pressed"]
